[package]
name = "boot"
version = "0.1.0"
edition = "2021"
documentation = "rust-embedded bootlaoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asraw = { version = "0.1.0", path = "../asraw", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
storage = { version = "0.1.0", path = "../storage", default-features = false }

[dev-dependencies]
simflash = { version = "0.1.0", path = "../simflash" }

[features]
default = ["std"]
std = ["asraw/std", "sha2/std", "storage/std"]
