[package]
name = "simflash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.storage]
version = "0.1.0"
path = "../storage"
default-features = false

[dependencies]

[features]
default = ["std"]
std = ["storage/std"]
